Fixing x button alignement in discussion.

--- a/lms/static/sass/discussion/utilities/_developer.scss
+++ b/lms/static/sass/discussion/utilities/_developer.scss
@@ -63,7 +63,7 @@ body.discussion {
     // alert controls
     .search-alert-controls {
       width: 28%;
-      text-align: right;
+      @include text-align(right);
 
       .control {
         @include font-size(14);
